--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -125,6 +125,11 @@ form.inline {
 	background-color: $colorGrey;
 }
 
+.btn-thin {
+	padding-left: 15px !important;
+	padding-right: 15px !important;
+}
+
 .alert-fixed {
   position:fixed;
   top: 0;
