--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -345,3 +345,38 @@ footer {
         }
     }
 }
+
+
+.notification-dropdown {
+    .btn {
+        border: none;
+        line-height: 30px;
+
+        &.recent i {
+            color: $colorHPIRed;
+            margin-right: 5px;
+        }
+    }
+
+    .dropdown-menu {
+        padding: 0px;
+        width: 300px;
+        max-height: 300px;
+        overflow: auto;
+    }
+
+    .notification-item {
+        padding: 10px 15px;
+        font-size: 14px;
+
+        & + .notification-item {
+            border-top: 1px solid #e5e5e5;
+        }
+
+        .notification-time {
+            color: #999;
+            font-size: 12px;
+            display: block;
+        }
+    }
+}
