add delete icon

--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -33,7 +33,7 @@
             {{/content}}
             {{#content "additional-actions"}}
                     <button type="button" class="btn btn-primary btn-danger btn-delete">
-                        Löschen
+                        <i class="fa fa-trash-o"></i> Löschen
                     </button>
             {{/content}}
         {{/embed}}
