--- a/static/styles/account/settings.scss
+++ b/static/styles/account/settings.scss
@@ -8,6 +8,16 @@
     color: #ffffff;
   }
 
+  table {
+    padding: 16px;
+    box-shadow: 0 1px 1px 0 #c7c7c7 inset;
+    background: none repeat scroll 0 0;
+  }
+
+  .send-test-notification {
+    margin-left: 20px;
+  }
+
   h4 {
     color: $colorHPIRed;
   }
