--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -58,37 +58,59 @@
             <input type="hidden" name="userId" value="{{userId}}"/>
         </div>
 
-        <div class="notification">
-            <h4><label>Benachrichtigungseinstellungen</label></h4>
-            {{#if device}}
-                <table width="100%" cellpadding="5px">
-                    <thead>
-                    <th></th>
-                    <th><label>Name</label></th>
-                    <th><label>Typ</label></th>
-                    <th><label>Betriebssystem</label></th>
-                    </thead>
-                    <tbody>
-                    {{#each device}}
-                        <tr id="{{this._id}}">
-                            <td>{{#if this.selected}}<a href="/account/settings/device"
-                                                        target="_blank"
-                                                        data-method="delete"
-                                                        data-device-name="{{this.name}}"
-                                                        data-device-id="{{this.token}}">
-                                <i class="fa fa-trash-o"></i></a>
-                            {{/if}}</td>
-                            <td class="form-group">{{this.name}}</td>
-                            <td class="form-group">{{this.type}}</td>
-                            <td class="form-group">{{this.OS}}</td>
-                        </tr>
-                    {{/each}}
-                    </tbody>
-                </table>
-            {{/if}}
-            <button type="button" class="btn btn-default btn-device" onclick="pushManager.requestPermission()">Benachrichtigungen
-                aktivieren
-            </button>
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse1"><label>Benachrichtigungseinstellungen</label></a>
+                </div>
+                </h4>
+                <div id="collapse1" class="panel-collapse collapse">
+
+                    <div class="notification">
+                        {{#if device}}
+                            <table width="100%" cellpadding="5px">
+                                <thead>
+                                <th></th>
+                                <th><label>Name</label></th>
+                                <th><label>Typ</label></th>
+                                <th><label>Betriebssystem</label></th>
+                                </thead>
+                                <tbody>
+                                {{#each device}}
+                                    <tr id="{{this._id}}">
+                                        <td>{{#if this.selected}}<a href="/account/settings/device"
+                                                                    target="_blank"
+                                                                    data-method="delete"
+                                                                    data-device-name="{{this.name}}"
+                                                                    data-device-id="{{this.token}}">
+                                            <i class="fa fa-trash-o"></i></a>
+                                        {{/if}}</td>
+                                        <td class="form-group">{{this.name}}</td>
+                                        <td class="form-group">{{this.type}}</td>
+                                        <td class="form-group">{{this.OS}}</td>
+                                    </tr>
+                                {{/each}}
+                                </tbody>
+                            </table>
+                        {{/if}}
+                        <div class="panel-footer">
+                            <button type="button" class="btn btn-default btn-device"
+                                    onclick="pushManager.requestPermission()">
+                                <i class="fa fa-bell" aria-hidden="true"></i>
+                                Benachrichtigungen
+                                aktivieren
+                            </button>
+
+                            <button type="button" class="btn btn-default send-test-notification">
+                                <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                                Test-Benachrichtigung
+                                senden
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
