--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -6,6 +6,19 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/loggedin.js" type="text/javascript" defer></script>
+
+        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.9.0/firebase-app.js" defer></script>
+        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.9.0/firebase-messaging.js" defer></script>
+        <script type="text/javascript" src="/scripts/notificationService/indexFirebase.js" defer></script>
+
+        <script type="text/javascript" src="/scripts/notificationService/callback.js" defer></script>
+        <script type="text/javascript" src="/scripts/notificationService/index.js" defer></script>
+
+        <script type="text/javascript">
+        window.addEventListener('DOMContentLoaded', function() {
+            setupFirebasePush();
+        });
+        </script>
     {{/content}}
 
     {{#content "body"}}
@@ -63,13 +76,13 @@
 
                         <li class="nav-item notification-dropdown">
                             <div class="dropdown show">
-                                <a class="btn btn-secondary btn-thin dropdown-toggle {{#if recentNotifications}}recent{{/if}}" data-toggle="dropdown">
+                                <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if recentNotifications}}recent{{/if}}" data-toggle="dropdown">
                                     <i class="fa fa-bolt"></i> {{#if recentNotifications}}<span class="tag tag-primary">{{recentNotifications}}</span>{{/if}}
                                 </a>
 
                                 <div class="dropdown-menu">
                                     {{#each notifications}}
-                                        <div class="notification-item">
+                                        <div class="notification-item {{#unless this.read}}unread{{/unless}}" data-notification-id="{{this.notificationId}}">
                                             <span>{{this.title}}</span>
                                             <time class="notification-time">{{timeFromNow this.date}}</time>
                                         </div>
