--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -112,7 +112,7 @@
                 <div class="panel-group">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <a data-toggle="collapse" href="#collapse1"><label>Termine auswählen</label></a>
+                            <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Termine auswählen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
                         </div>
                         <div id="collapse1" class="panel-collapse collapse">
                             <div class="times">
