add no devices text

--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -93,6 +93,10 @@
                                 {{/each}}
                                 </tbody>
                             </table>
+                        {{else}}
+                            <h5 class="text-muted text-center">
+                                <span>Keine Geräte eingetragen</span>
+                            </h5>
                         {{/if}}
                         <div class="panel-footer">
                             <button type="button" class="btn btn-default btn-device"
