--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -62,7 +62,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse1"><label>Benachrichtigungseinstellungen</label></a>
+                        <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Benachrichtigungseinstellungen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
                 </div>
                 </h4>
                 <div id="collapse1" class="panel-collapse collapse">
@@ -93,6 +93,10 @@
                                 {{/each}}
                                 </tbody>
                             </table>
+                        {{else}}
+                            <h5 class="text-muted text-center">
+                                <span>Keine Geräte eingetragen</span>
+                            </h5>
                         {{/if}}
                         <div class="panel-footer">
                             <button type="button" class="btn btn-default btn-device"
