--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -5,7 +5,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/courses.js" type="text/javascript" defer></script>
+        <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
@@ -139,7 +139,7 @@
                                     <tbody class="add-course-times">
                                     <tr>
                                         <td>
-                                            <i class="fa fa-plus new-custom-field-add"></i>
+                                            <i class="fa fa-plus new-course-time-add" data-timesref="#collapse1"></i>
                                         </td>
                                         <td>
                                             <select class="new-weekday">
