--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -35,41 +35,7 @@
                         <label>Note</label>
                         <select name="grade" data-placeholder="Note auswählen">
                                 <option value="">Keine Bewertung</option>
-                            {{#if @root.courseId.gradeSystem}}
-                                <option value="15" {{#ifvalue this.submission.grade value=15}} selected {{/ifvalue}}>1+</option>
-                                <option value="14" {{#ifvalue this.submission.grade value=14}} selected {{/ifvalue}}>1</option>
-                                <option value="13" {{#ifvalue this.submission.grade value=13}} selected {{/ifvalue}}>1-</option>
-                                <option value="12" {{#ifvalue this.submission.grade value=12}} selected {{/ifvalue}}>2+</option>
-                                <option value="11" {{#ifvalue this.submission.grade value=11}} selected {{/ifvalue}}>2</option>
-                                <option value="10" {{#ifvalue this.submission.grade value=10}} selected {{/ifvalue}}>2-</option>
-                                <option value="9" {{#ifvalue this.submission.grade value=9}} selected {{/ifvalue}}>3+</option>
-                                <option value="8" {{#ifvalue this.submission.grade value=8}} selected {{/ifvalue}}>3</option>
-                                <option value="7" {{#ifvalue this.submission.grade value=7}} selected {{/ifvalue}}>3-</option>
-                                <option value="6" {{#ifvalue this.submission.grade value=6}} selected {{/ifvalue}}>4+</option>
-                                <option value="5" {{#ifvalue this.submission.grade value=5}} selected {{/ifvalue}}>4</option>
-                                <option value="4" {{#ifvalue this.submission.grade value=4}} selected {{/ifvalue}}>4-</option>
-                                <option value="3" {{#ifvalue this.submission.grade value=3}} selected {{/ifvalue}}>5+</option>
-                                <option value="2" {{#ifvalue this.submission.grade value=2}} selected {{/ifvalue}}>5</option>
-                                <option value="1" {{#ifvalue this.submission.grade value=1}} selected {{/ifvalue}}>5-</option>
-                                <option value="0" {{#ifvalue this.submission.grade value=0}} selected {{/ifvalue}}>6</option>
-                            {{else}}
-                                <option value="15" {{#ifvalue this.submission.grade value=15}} selected {{/ifvalue}}>15</option>
-                                <option value="14" {{#ifvalue this.submission.grade value=14}} selected {{/ifvalue}}>14</option>
-                                <option value="13" {{#ifvalue this.submission.grade value=13}} selected {{/ifvalue}}>13</option>
-                                <option value="12" {{#ifvalue this.submission.grade value=12}} selected {{/ifvalue}}>12</option>
-                                <option value="11" {{#ifvalue this.submission.grade value=11}} selected {{/ifvalue}}>11</option>
-                                <option value="10" {{#ifvalue this.submission.grade value=10}} selected {{/ifvalue}}>10</option>
-                                <option value="9" {{#ifvalue this.submission.grade value=9}} selected {{/ifvalue}}>9</option>
-                                <option value="8" {{#ifvalue this.submission.grade value=8}} selected {{/ifvalue}}>8</option>
-                                <option value="7" {{#ifvalue this.submission.grade value=7}} selected {{/ifvalue}}>7</option>
-                                <option value="6" {{#ifvalue this.submission.grade value=6}} selected {{/ifvalue}}>6</option>
-                                <option value="5" {{#ifvalue this.submission.grade value=5}} selected {{/ifvalue}}>5</option>
-                                <option value="4" {{#ifvalue this.submission.grade value=4}} selected {{/ifvalue}}>4</option>
-                                <option value="3" {{#ifvalue this.submission.grade value=3}} selected {{/ifvalue}}>3</option>
-                                <option value="2" {{#ifvalue this.submission.grade value=2}} selected {{/ifvalue}}>2</option>
-                                <option value="1" {{#ifvalue this.submission.grade value=1}} selected {{/ifvalue}}>1</option>
-                                <option value="0" {{#ifvalue this.submission.grade value=0}} selected {{/ifvalue}}>0</option>
-                            {{/if}}
+                                {{{this.submission.gradeoptions}}}
                         </select>
                     </div>
                     <h6>Kommentar</h6>
