506 themen sollen per haken freischaltbar sein nicht nur abschnitte (#225)
* [ci skip] WIP

* Make topics hidden (or not hidden)

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -30,6 +30,24 @@
         cursor: pointer;
     }
 
+    .card-topic {
+        cursor: pointer;
+        .btn-hidden-toggle {
+        }
+        .topic-label {
+            margin-bottom: 0;
+            line-height: 35px;
+        }
+        .input-group-btn {
+            padding-right: 100px;
+            float: right;
+        }
+    }
+
+    .topic {
+        margin-top: 10px;
+    }
+
     .content-block {
         margin-bottom: 50px;
 
