--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -26,6 +26,12 @@
             <aside class="nav-sidebar">
                 <nav>
                     <ul>
+                        <li>
+                            <div class="sc-branding">
+                                <i class="fa fa-cloud" aria-hidden="true"></i>
+                                <span>Schul-Cloud</span>
+                            </div>
+                        </li>
                         {{#each sidebarItems}}
                             <li>
                                 <a class="{{this.class}}" href="{{this.link}}">
@@ -73,7 +79,6 @@
                     {{/if}}
 
                     <ul class="nav navbar-nav float-xs-right">
-
                         <li class="nav-item notification-dropdown">
                             <div class="dropdown show">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if recentNotifications}}recent{{/if}}" data-toggle="dropdown">
