--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -5,6 +5,7 @@
 @import "./bootstrap/scss/bootstrap";
 @import "./fontawesome/font-awesome";
 @import "./chosen/bootstrap-chosen.scss";
+@import "./datetimepicker/jquery.datetimepicker.min.css";
 
 /* customize bootstrap stuff in /bootstrap/scss/_custom.scss */
 
