--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -1,6 +1,7 @@
 {{#extend "lib/loggedin"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/calendar/fullcalendar.min.css"/>
+        <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
         <link rel="stylesheet" href="/styles/calendar/calendar.css"/>
     {{/content}}
 
@@ -13,6 +14,7 @@
         </script>
         <script src="/scripts/fullcalendar/fullcalendar.min.js" type="text/javascript" defer></script>
         <script src="/scripts/fullcalendar/de.js" type="text/javascript" defer></script>
+        <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
         <script src="/scripts/calendar.js" type="text/javascript" defer></script>
     {{/content}}
 
