--- a/views/calendar/forms/form-create-event.hbs
+++ b/views/calendar/forms/form-create-event.hbs
@@ -7,12 +7,12 @@
 <div class="form-group row">
     <div class="form-group col-md-6">
         <label>Von</label>
-        <input name="startDate" id="startDate" type="datetime-local" class="form-control"/>
+        <input name="startDate" id="startDate" type="text" class="form-control" data-datetime/>
     </div>
 
     <div class="form-group col-md-6">
         <label>Bis</label>
-        <input name="endDate" id="endDate" type="datetime-local" class="form-control"/>
+        <input name="endDate" id="endDate" type="text" class="form-control" data-datetime/>
     </div>
 </div>
 <div class="form-group">
